// Copyright 2015 The gRPC Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

option java_multiple_files = true;
option java_package = "ru.home.grpc.chat";
option java_outer_classname = "ChatProto";
option objc_class_prefix = "RTG";

package ru.home.grpc.chat;

message AuthRequest {
    string login = 1;
    string password = 2;
}

message AuthResponse {
    uint32 result = 1;
    string id = 2;
}



message ClientMessage {
  string message = 1;
}

message ServerMessage {
  google.protobuf.Timestamp timestamp = 1;
  string from    = 2;
  string message = 3;
}

service ChatService {
  rpc authenticate(AuthRequest) returns (AuthResponse);
  rpc chat(stream ClientMessage) returns (stream ServerMessage);
}